feat: add cluster statistics
