# server/src/main/java/dev/tahar/server/controller/StatisticsController.java
@@ -1,9 +1,11 @@
 package dev.tahar.server.controller;
 
+import dev.tahar.server.mapping.StatisticsMapper;
 import dev.tahar.server.service.StatisticsService;
 import lombok.RequiredArgsConstructor;
 import org.openapitools.api.StatisticsApi;
 import org.openapitools.model.EventStatisticsV1;
+import org.openapitools.model.KafkaClusterStatistics;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
@@ -12,6 +14,14 @@ import org.springframework.web.bind.annotation.RestController;
 public class StatisticsController implements StatisticsApi {
 
     private final StatisticsService statisticsService;
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    public ResponseEntity<KafkaClusterStatistics> fetchClusterStatistics() {
+        return ResponseEntity.ok(StatisticsMapper.INSTANCE.toOpenApiClusterStatistics(statisticsService.getForKafkaCluster()));
+    }
 
     /**
      * {@inheritDoc}
