# server/src/main/java/dev/tahar/server/model/KafkaClusterStatistics.java
@@ -1,0 +1,8 @@
+package dev.tahar.server.model;
+
+import lombok.NonNull;
+
+import java.util.List;
+
+public record KafkaClusterStatistics(@NonNull List<ClusterNodeInformation> nodes) {
+}
